welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:4: error: not found: value e
  if (d<=2 ||  e>=8){
               ^