welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
  var d : Int = num%10
  
  if (d<=2 ||  e>=8){
    return true
  }
  else{
    return false
  }
}
